--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,4 +47,11 @@ Redirect permanent /github http://www.github.com/chenpanxyz
 RewriteBase /
 Redirect permanent /blog https://blog.chenpan.xyz/
 
+<IfModule pagespeed_module>
+    ModPageSpeed on
+    ModPagespeedRewriteLevel CoreFilters
+    ModPagespeedEnableFilters prioritize_critical_css
+    ModPagespeedEnableFilters sprite_images
+    ModPagespeedEnableFilters convert_to_webp_lossless,convert_png_to_jpeg,convert_jpeg_to_webp
+    ModPagespeedEnableFilters collapse_whitespace,remove_comments
 </IfModule>
