--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "laravel/laravel",
+    "name": "Pan Chen's Personal Website",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "My personal website.",
     "keywords": [
-        "framework",
-        "laravel"
+        "Pan Chen"
     ],
     "license": "MIT",
     "require": {
